Use sockets for nginx connfig

--- a/tdwnsv3.ini
+++ b/tdwnsv3.ini
@@ -1,17 +1,17 @@
 [uwsgi]
-module = wsgi
+#module = wsgi_tdwnsv3
 callable = app 
 master = true
 thunder-lock = true
-processes = 2
+processes = 1
 threads = 2
-thunder=true
 #vacuum = true
 #die-on-term = true
-#logto = /generals.log
-#daemonize = daemonize.log 
-http = 0.0.0.0:8001
-#socket = ///tmp/tdwnsv3.sock
-#chmod-socket = 755
-#wsgi-file = wsgi.py
-pyargv = -d /home -ho files -st static -se 300 --disable-aggressive
+logto = tdwnsv3/generals.log
+daemonize = tdwnsv3/daemonize.log 
+socket = ///tmp/generals.sock
+#http = 0.0.0.0:8000
+chmod-socket = 777
+#pythonpath = /home/smartwa/git/tdwnsv3/
+wsgi-file = wsgi_tdwnsv3.py  
+pyargv = -d /home/smartwa -ho files -st static -se 10000 --host --disable-aggressive --upload --upload-multiple -upl 10000 -ups 10000000
