Add uwsgi callable script

--- a/tdwnsv3.ini
+++ b/tdwnsv3.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-#module = wsgi_tdwnsv3
+module = wsgi
 callable = app 
 master = true
 thunder-lock = true
@@ -7,11 +7,11 @@ processes = 1
 threads = 2
 #vacuum = true
 #die-on-term = true
-logto = tdwnsv3/generals.log
-daemonize = tdwnsv3/daemonize.log 
+logto = generals.log
+daemonize = daemonize.log 
 socket = ///tmp/generals.sock
 #http = 0.0.0.0:8000
 chmod-socket = 777
 #pythonpath = /home/smartwa/git/tdwnsv3/
-wsgi-file = wsgi_tdwnsv3.py  
-pyargv = -d /home/smartwa -ho files -st static -se 10000 --host --disable-aggressive --upload --upload-multiple -upl 10000 -ups 10000000
+#wsgi-file = wsg.py  
+pyargv = -d /home -ho files -st static -se 10000 --host --disable-aggressive --upload --upload-multiple -upl 10000 -ups 10000000
