--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask>=2.2.2
-cryptography>=39.0.0
-appdirs>=1.4.4
+Flask==2.2.2
+cryptography==39.0.0
+appdirs==1.4.4
 Flask-Admin==1.6.1
+Werkzeug==2.2.2
